--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 
     <link rel="stylesheet" href="Main/css/main.css" />
     <link rel="stylesheet" href="Main/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
   </head>
   <body>
     <div class="firework"></div>
@@ -21,11 +18,7 @@
     <div class="chat-bar-collapsible">
       <button id="chat-button" type="button" class="collapsible">
         Chat with us!
-        <i
-          id="chat-icon"
-          style="color: #fff"
-          class="fa fa-fw fa-comments-o"
-        ></i>
+        <i id="chat-icon" style="color: #fff" class="fa fa-fw fa-comments-o"></i>
       </button>
 
       <div class="content">
@@ -55,18 +48,8 @@
                 </div>
 
                 <div class="chat-bar-icons">
-                  <i
-                    id="chat-icon"
-                    style="color: crimson"
-                    class="fa fa-fw fa-heart"
-                    onclick="heartButton()"
-                  ></i>
-                  <i
-                    id="chat-icon"
-                    style="color: #333"
-                    class="fa fa-fw fa-send"
-                    onclick="sendButton()"
-                  ></i>
+                  <i id="chat-icon" style="color: crimson" class="fa fa-fw fa-heart" onclick="heartButton()"></i>
+                  <i id="chat-icon" style="color: #333" class="fa fa-fw fa-send" onclick="sendButton()"></i>
                 </div>
               </div>
 
